--- a/app/src/main/res/layout/content_merchant_back_office.xml
+++ b/app/src/main/res/layout/content_merchant_back_office.xml
@@ -61,6 +61,16 @@
 
                 </android.support.v7.widget.CardView>
 
+                <Button
+                    android:id="@+id/viewOrdersBtn"
+                    style="?android:attr/buttonBarButtonStyle"
+                    android:textColor="@color/greenDart"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/view_orders"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/chartCardView"/>
+
             </android.support.constraint.ConstraintLayout>
 
             <android.support.constraint.ConstraintLayout
