--- a/app/src/main/res/layout/sales_order_item.xml
+++ b/app/src/main/res/layout/sales_order_item.xml
@@ -16,6 +16,9 @@
             android:layout_width="match_parent"
             android:orientation="vertical"
             android:paddingBottom="8dp"
+            android:id="@+id/item_status_bloc"
+            android:clickable="true"
+            android:focusable="true"
             android:layout_height="match_parent">
 
             <LinearLayout
@@ -45,8 +48,11 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/item_description_bloc"
                 android:layout_width="match_parent"
                 android:orientation="vertical"
+                android:clickable="true"
+                android:focusable="true"
                 android:paddingLeft="@dimen/activity_vertical_margin"
                 android:paddingRight="@dimen/activity_vertical_margin"
                 android:layout_height="wrap_content">
