--- a/app/src/main/res/layout/activity_salesorder_list.xml
+++ b/app/src/main/res/layout/activity_salesorder_list.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
+    android:id="@+id/salesOrderListContainer"
     tools:context="co.loystar.loystarbusiness.activities.SalesOrderListActivity">
 
     <android.support.design.widget.AppBarLayout
