--- a/app/src/main/res/layout/sales_order_item.xml
+++ b/app/src/main/res/layout/sales_order_item.xml
@@ -21,10 +21,8 @@
             android:focusable="true"
             android:layout_height="match_parent">
 
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:orientation="vertical"
-                android:gravity="center"
                 android:layout_height="wrap_content">
 
                 <TextView
@@ -33,6 +31,7 @@
                     android:id="@+id/status_text"
                     android:textAlignment="center"
                     android:paddingLeft="3dp"
+                    android:layout_centerHorizontal="true"
                     android:paddingRight="3dp"
                     android:textColor="@color/white"
                     android:background="@color/orange"
@@ -41,11 +40,27 @@
 
                 <TextView
                     android:layout_width="wrap_content"
+                    android:layout_below="@+id/status_text"
+                    android:layout_centerHorizontal="true"
                     android:id="@+id/timestamp_text"
                     android:text="5 min ago"
                     android:layout_height="wrap_content" />
 
-            </LinearLayout>
+                <ImageView
+                    android:contentDescription="@string/image"
+                    android:layout_width="wrap_content"
+                    android:visibility="gone"
+                    android:paddingTop="10dp"
+                    android:paddingEnd="10dp"
+                    android:paddingRight="10dp"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:id="@+id/printOrderReceipt"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_height="wrap_content" />
+
+            </RelativeLayout>
 
             <LinearLayout
                 android:id="@+id/item_description_bloc"
