--- a/app/src/main/res/layout-w600dp/sales_order_item.xml
+++ b/app/src/main/res/layout-w600dp/sales_order_item.xml
@@ -46,20 +46,6 @@
                     android:text="5 min ago"
                     android:layout_height="wrap_content" />
 
-                <ImageView
-                    android:contentDescription="@string/image"
-                    android:layout_width="wrap_content"
-                    android:visibility="visible"
-                    android:paddingTop="10dp"
-                    android:paddingEnd="10dp"
-                    android:paddingRight="10dp"
-                    android:clickable="true"
-                    android:focusable="true"
-                    android:id="@+id/printOrderReceipt"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignParentRight="true"
-                    android:layout_height="wrap_content" />
-
             </RelativeLayout>
 
             <LinearLayout
@@ -86,27 +72,39 @@
                     android:text="bottled water(2), chicken wings(1), fried goat(2), balls of kenkey(3), fried fish (2)"
                     android:layout_height="wrap_content" />
 
+                <ImageView
+                    android:contentDescription="@string/image"
+                    android:layout_width="wrap_content"
+                    android:visibility="gone"
+                    android:paddingTop="10dp"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:layout_gravity="end"
+                    android:id="@+id/printOrderReceipt"
+                    android:layout_height="wrap_content" />
+
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:id="@+id/salesOrderActionsWrapper"
                 android:visibility="gone"
-                android:orientation="horizontal"
+                android:orientation="vertical"
                 android:paddingLeft="@dimen/activity_vertical_margin"
                 android:paddingRight="@dimen/activity_vertical_margin"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:baselineAligned="false">
 
                 <android.support.constraint.ConstraintLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1">
+                    android:layout_width="match_parent"
+                    android:layout_marginBottom="-18dp"
+                    android:layout_height="wrap_content">
 
                     <ImageView
                         android:contentDescription="@string/image"
                         android:id="@+id/rejectImg"
-                        android:layout_width="15dp"
-                        android:layout_height="15dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:layout_marginRight="5dp"
                         android:layout_marginEnd="5dp"
                         android:src="@drawable/ic_red_cross_tick"
@@ -116,7 +114,6 @@
 
                     <Button
                         android:id="@+id/rejectBtn"
-                        android:padding="0dp"
                         style="?android:attr/buttonBarButtonStyle"
                         android:layout_width="wrap_content"
                         android:textColor="@android:color/holo_red_dark"
@@ -128,14 +125,13 @@
                 </android.support.constraint.ConstraintLayout>
 
                 <android.support.constraint.ConstraintLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1">
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
 
                     <ImageView
                         android:id="@+id/processImg"
-                        android:layout_width="15dp"
-                        android:layout_height="15dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:contentDescription="@string/image"
                         android:src="@drawable/ic_greentick_small"
                         android:layout_marginRight="5dp"
@@ -150,7 +146,6 @@
                         style="?android:attr/buttonBarButtonStyle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:padding="0dp"
                         android:text="@string/action_process_order"
                         android:textColor="@color/green"
                         app:layout_constraintEnd_toEndOf="parent"
