--- a/app/src/main/res/menu/save_or_delete_menu.xml
+++ b/app/src/main/res/menu/save_or_delete_menu.xml
@@ -2,8 +2,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_done"
+        android:id="@+id/action_save"
         android:title="@string/save"
         android:icon="@drawable/ic_done_white_48px"
-        app:showAsAction="always" />
+        app:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/action_delete"
+        android:title="@string/delete"
+        android:icon="@android:drawable/ic_menu_delete"
+        app:showAsAction="ifRoom" />
 </menu>
