--- a/app/src/main/res/layout/order_summary_item.xml
+++ b/app/src/main/res/layout/order_summary_item.xml
@@ -6,112 +6,74 @@
             name="product"
             type="co.loystar.loystarbusiness.models.entities.Product" />
     </data>
-    <RelativeLayout
-        android:layout_width="match_parent"
+    <LinearLayout
         android:paddingTop="@dimen/activity_vertical_margin"
         android:paddingBottom="@dimen/activity_vertical_margin"
-        android:layout_height="wrap_content">
+        android:layout_width="match_parent"
+        android:orientation="horizontal"
+        android:baselineAligned="false"
+        android:layout_height="match_parent">
 
         <LinearLayout
-            android:id="@+id/top_wrapper"
-            android:layout_width="match_parent"
-            android:orientation="horizontal"
-            android:baselineAligned="false"
-            android:layout_height="wrap_content">
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="0.5"
+            android:id="@+id/product_image_wrapper" >
 
-            <RelativeLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1.5"
-                android:id="@+id/product_image_wrapper" >
-
-                <ImageView
-                    android:contentDescription="@string/image"
-                    android:id="@+id/product_image"
-                    android:layout_width="70dp"
-                    android:layout_height="50dp" />
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentStart="true"
-                    android:layout_alignParentLeft="true"
-                    android:layout_marginStart="@dimen/order_item_text_margin_start"
-                    android:layout_marginLeft="@dimen/order_item_text_margin_start"
-                    android:layout_centerVertical="true"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:textColor="@color/colorAccentDark"
-                        android:id="@+id/product_name"
-                        android:layout_height="wrap_content" />
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:id="@+id/product_cost"
-                        android:layout_marginTop="5dp"
-                        android:textColor="@color/colorAccentDark"
-                        android:layout_height="wrap_content" />
-
-                </LinearLayout>
-            </RelativeLayout>
-            <RelativeLayout
-                android:layout_width="0dp"
-                android:layout_weight="0.5"
-                android:layout_marginLeft="5dp"
-                android:layout_marginStart="5dp"
-                android:layout_height="wrap_content">
-
-                <ImageView
-                    android:contentDescription="@string/image"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignParentRight="true"
-                    android:id="@+id/delete_cart_item"
-                    android:tint="@color/colorAccent"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginEnd="10dp"
-                    android:layout_marginRight="10dp"
-                    app:srcCompat="@drawable/ic_close_white_24px"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-            </RelativeLayout>
+            <ImageView
+                android:contentDescription="@string/image"
+                android:id="@+id/product_image"
+                android:layout_width="70dp"
+                android:layout_height="50dp"
+                />
         </LinearLayout>
+        <RelativeLayout
+            android:layout_width="0dp"
+            android:layout_weight="1.5"
+            android:layout_marginLeft="5dp"
+            android:layout_marginStart="5dp"
+            android:layout_height="match_parent">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:orientation="horizontal"
-            android:layout_marginTop="8dp"
-            android:layout_below="@+id/top_wrapper"
-            android:layout_height="wrap_content">
+            <TextView
+                android:layout_width="wrap_content"
+                android:textColor="@color/colorAccentDark"
+                android:id="@+id/product_name"
+                android:layout_height="wrap_content" />
 
-            <co.loystar.loystarbusiness.utils.ui.buttons.SpinnerButton
-                android:id="@+id/select_program_spinner"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1.2"
-                android:prompt="@string/select_loyalty_program_short"
-                android:entries="@array/empty_select"/>
+            <ImageView
+                android:contentDescription="@string/image"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:id="@+id/delete_cart_item"
+                android:tint="@color/colorAccent"
+                android:layout_marginStart="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginRight="10dp"
+                app:srcCompat="@drawable/ic_close_white_24px"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
 
-            <FrameLayout
-                android:layout_width="0dp"
-                android:layout_weight="0.8"
-                android:layout_height="wrap_content">
+            <TextView
+                android:layout_width="wrap_content"
+                android:id="@+id/product_cost"
+                android:layout_marginTop="5dp"
+                android:textColor="@color/colorAccentDark"
+                android:layout_below="@+id/product_name"
+                android:layout_height="wrap_content" />
 
-                <co.loystar.loystarbusiness.utils.ui.buttons.IncrementDecrementButton
-                    android:layout_gravity="end"
-                    android:layout_marginStart="1dp"
-                    android:layout_marginLeft="1dp"
-                    android:layout_marginEnd="1dp"
-                    android:layout_marginRight="1dp"
-                    android:layout_width="100dp"
-                    android:id="@+id/order_item_inc_dec_btn"
-                    android:layout_height="wrap_content" />
-
-            </FrameLayout>
-
-        </LinearLayout>
-
-    </RelativeLayout>
+            <co.loystar.loystarbusiness.utils.ui.buttons.IncrementDecrementButton
+                android:layout_marginTop="5dp"
+                android:layout_below="@+id/product_cost"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
+                android:layout_marginStart="1dp"
+                android:layout_marginLeft="1dp"
+                android:layout_marginEnd="1dp"
+                android:layout_marginRight="1dp"
+                android:layout_width="100dp"
+                android:id="@+id/order_item_inc_dec_btn"
+                android:layout_height="wrap_content" />
+        </RelativeLayout>
+    </LinearLayout>
 </layout>
