--- a/app/src/main/res/layout/customer_item.xml
+++ b/app/src/main/res/layout/customer_item.xml
@@ -19,7 +19,7 @@
 
         <TextView
             android:id="@+id/customer_name"
-            android:textColor="@color/title"
+            android:textColor="@color/titleColor"
             android:textSize="18sp"
             android:textStyle="bold"
             android:layout_alignParentTop="true"
