--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -50,7 +50,7 @@
     </style>
 
     <style name="mySearchSuggestionResultTitle" parent="TextAppearance.AppCompat.SearchResult.Title">
-        <item name="android:textColor">@color/title</item>
+        <item name="android:textColor">@color/titleColor</item>
         <item name="android:textSize">18sp</item>
     </style>
 
