move customer support to main settings menu.

--- a/app/src/main/res/xml/pref_products_and_services.xml
+++ b/app/src/main/res/xml/pref_products_and_services.xml
@@ -17,4 +17,8 @@
         android:key="@string/pref_birthday_messages_and_offers_key"
         android:title="@string/birthday_messages_and_offers">
     </Preference>
+    <Preference
+        android:key="@string/pref_loyalty_programs_key"
+        android:title="@string/pref_loyalty_programs">
+    </Preference>
 </PreferenceScreen>
