--- a/app/src/main/res/xml/pref_headers.xml
+++ b/app/src/main/res/xml/pref_headers.xml
@@ -29,4 +29,12 @@
         android:icon="@drawable/ic_sync_black_24dp"
         android:title="@string/pref_header_data_sync" />
 
+    <header
+        android:id="@+id/loystar_support_pref_header"
+        android:fragment="co.loystar.loystarbusiness.activities.SettingsActivity$GeneralPreferenceFragment"
+        android:icon="@drawable/ic_customer_support"
+        android:title="@string/pref_support_title">
+        <extra android:name="settings" android:value="@string/pref_support_key" />
+    </header>
+
 </preference-headers>
