--- a/app/src/main/res/xml/bottom_bar_tabs.xml
+++ b/app/src/main/res/xml/bottom_bar_tabs.xml
@@ -13,7 +13,7 @@
         icon="@drawable/ic_people_black_24dp"
         title="@string/customers_title" />
     <tab
-        id="@+id/campaigns"
-        icon="@drawable/ic_loyalty_program"
-        title="@string/campaigns" />
+        id="@+id/orders"
+        icon="@drawable/ic_view_orders"
+        title="@string/orders" />
 </tabs>
