--- a/app/src/main/res/layout/empty_orders_recycler_state.xml
+++ b/app/src/main/res/layout/empty_orders_recycler_state.xml
@@ -26,16 +26,29 @@
         app:layout_constraintRight_toRightOf="parent" />
 
     <TextView
+        android:id="@+id/stateIntroText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:textSize="18sp"
         android:textStyle="bold"
-        android:gravity="center"
-        android:textColor="@color/titleColor"
-        android:text="@string/no_orders_received"
+        android:textColor="@color/wallet_hint_foreground_holo_dark"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/stateImage" />
+
+    <TextView
+        android:id="@+id/stateDescriptionText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:gravity="center"
+        android:text="@string/no_orders_received"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:textColor="@color/titleColor"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/stateIntroText" />
 
 </android.support.constraint.ConstraintLayout>
