preferences icon changes.

--- a/app/src/main/res/xml/pref_headers.xml
+++ b/app/src/main/res/xml/pref_headers.xml
@@ -11,14 +11,14 @@
 
     <header
         android:fragment="co.loystar.loystarbusiness.activities.SettingsActivity$SettingsFragment"
-        android:icon="@drawable/ic_shopping_cart_black_24px"
+        android:icon="@drawable/ic_shopping_cart_green_24px"
         android:title="@string/my_products_and_services">
         <extra android:name="settings" android:value="@string/settings_products_and_services" />
     </header>
 
     <header
         android:fragment="co.loystar.loystarbusiness.activities.SettingsActivity$SettingsFragment"
-        android:icon="@drawable/ic_info_black_24dp"
+        android:icon="@drawable/ic_info_green_24px"
         android:title="@string/pref_header_general" >
         <extra android:name="settings" android:value="@string/settings_general" />
     </header>
@@ -32,14 +32,21 @@
 
     <header
         android:fragment="co.loystar.loystarbusiness.activities.SettingsActivity$SettingsFragment"
-        android:icon="@drawable/ic_sync_black_24dp"
+        android:icon="@drawable/ic_sync_green_24px"
         android:title="@string/pref_header_data_sync">
         <extra android:name="settings" android:value="@string/settings_data_and_sync" />
     </header>
 
     <header
+        android:fragment="co.loystar.loystarbusiness.activities.SettingsActivity$SettingsFragment"
+        android:icon="@drawable/ic_printer_green_24px"
+        android:title="@string/pref_header_print_options">
+        <extra android:name="settings" android:value="@string/settings_print" />
+    </header>
+
+    <header
         android:id="@+id/loystar_support_pref_header"
-        android:icon="@drawable/ic_customer_support"
+        android:icon="@drawable/ic_customer_support_green_24px"
         android:title="@string/pref_support_title">
     </header>
 
