--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="colorAccentLighter">#f3f2f2</color>
     <color name="colorAccentDark">#494b4d</color>
     <color name="colorControlHighlight">#c5c5c5</color>
-    <color name="greenDart">#044700</color>
+    <color name="greenDarK">#044700</color>
     <color name="green">#328A2E</color>
     <color name="translucent">#80000000</color>
     <color name="titleColor">#666666</color>
