sales remodelling in progress, cash sale with pos done.

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -39,4 +39,8 @@
     <declare-styleable name="BrandButtonTransparent">
         <attr name="backgroundDrawable"/>
     </declare-styleable>
+
+    <declare-styleable name="GreenButton">
+        <attr name="backGroundColor" />
+    </declare-styleable>
 </resources>
