--- a/app/src/main/res/layout/content_pos_sale_confirmation.xml
+++ b/app/src/main/res/layout/content_pos_sale_confirmation.xml
@@ -12,13 +12,38 @@
     tools:showIn="@layout/activity_sale_with_pos_confirmation">
 
     <LinearLayout
+        android:id="@+id/no_customer_wrapper"
+        android:visibility="gone"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_marginBottom="24dp"
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:contentDescription="@string/image"
+            android:layout_gravity="center"
+            android:src="@drawable/ic_tick" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/transaction_complete"
+            android:layout_marginTop="5dp"
+            android:textAlignment="center"
+            android:textSize="18sp" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/deals_wrapper"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_weight="1"
         android:layout_height="0dp">
 
         <ImageView
-            android:id="@+id/imageView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:contentDescription="@string/image"
