card payment dialog done.

--- a/app/src/main/res/layout/cash_payment_dialog.xml
+++ b/app/src/main/res/layout/cash_payment_dialog.xml
@@ -24,7 +24,7 @@
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
         <TextView
-            android:id="@+id/totalCash"
+            android:id="@+id/totalCharge"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:textColor="@color/titleColor"
