--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -24,4 +24,5 @@
     <dimen name="fab_top_margin">64dp</dimen>
     <dimen name="badge_text_size">12sp</dimen>
     <dimen name="order_item_text_margin_start">90dp</dimen>
+    <dimen name="appbar_padding_top">8dp</dimen>
 </resources>
