--- a/app/src/main/res/layout/no_sales_view.xml
+++ b/app/src/main/res/layout/no_sales_view.xml
@@ -5,7 +5,7 @@
     android:visibility="gone"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:id="@+id/no_sales_empty_view"
+    android:id="@+id/noSalesView"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <android.support.constraint.Guideline
@@ -32,7 +32,7 @@
         android:layout_marginTop="16dp"
         android:textSize="18sp"
         android:textStyle="bold"
-        android:textColor="@color/titleColor"
+        android:textColor="@color/white"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/stateImage" />
@@ -47,8 +47,19 @@
         android:gravity="center"
         android:text="@string/no_orders_received"
         app:layout_constraintEnd_toEndOf="parent"
-        android:textColor="@color/titleColor"
+        android:textColor="@color/white"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/stateIntroText" />
+
+    <co.loystar.loystarbusiness.utils.ui.buttons.BrandButtonNormal
+        android:id="@+id/stateActionBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/stateDescriptionText" />
 
 </android.support.constraint.ConstraintLayout>
