--- a/app/src/main/res/layout/activity_sales_history.xml
+++ b/app/src/main/res/layout/activity_sales_history.xml
@@ -24,4 +24,19 @@
 
     <include layout="@layout/content_sales_history" />
 
+    <FrameLayout
+        app:layout_behavior="co.loystar.loystarbusiness.utils.ui.UserLockBottomSheetBehavior"
+        android:fitsSystemWindows="true"
+        android:clickable="true"
+        android:focusable="true"
+        style="@style/Theme.ActionBar.HigherElevation"
+        app:behavior_hideable="true"
+        app:behavior_peekHeight="0dp"
+        android:id="@+id/sale_detail_bottom_sheet_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <include layout="@layout/sale_detail_bottom_sheet" />
+    </FrameLayout>
+
 </android.support.design.widget.CoordinatorLayout>
