--- a/app/src/main/res/layout/cash_payment_dialog.xml
+++ b/app/src/main/res/layout/cash_payment_dialog.xml
@@ -20,14 +20,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/total_charge_label"
-            android:textColor="@color/titleColor"
+            android:textColor="@color/primaryTextColor"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
         <TextView
             android:id="@+id/totalCharge"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:textColor="@color/titleColor"
+            android:textColor="@color/primaryTextColor"
             android:layout_weight="1"
             android:gravity="end|center_vertical"
             android:textAppearance="?android:attr/textAppearanceMedium" />
@@ -47,7 +47,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/cash_collected_label"
-            android:textColor="@color/titleColor"
+            android:textColor="@color/primaryTextColor"
             android:layout_marginRight="8dp"
             android:layout_marginEnd="8dp"
             android:textAppearance="?android:attr/textAppearanceMedium" />
@@ -76,14 +76,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/change"
-            android:textColor="@color/titleColor"
+            android:textColor="@color/primaryTextColor"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
         <TextView
             android:id="@+id/cashChange"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:textColor="@color/titleColor"
+            android:textColor="@color/primaryTextColor"
             android:layout_weight="1"
             android:gravity="end|center_vertical"
             android:textAppearance="?android:attr/textAppearanceMedium"
