--- a/app/src/main/res/layout/content_merchant_back_office.xml
+++ b/app/src/main/res/layout/content_merchant_back_office.xml
@@ -36,7 +36,7 @@
                     android:layout_height="wrap_content"
                     android:text="@string/sales_overview"
                     android:textSize="16sp"
-                    android:textColor="@color/titleColor"
+                    android:textColor="@color/primaryTextColor"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"/>
 
@@ -141,7 +141,7 @@
             android:layout_width="match_parent"
             android:text="@string/order_received"
             android:gravity="center"
-            android:textColor="@color/titleColor"
+            android:textColor="@color/primaryTextColor"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:layout_height="wrap_content" />
 
@@ -157,7 +157,7 @@
             style="?android:attr/buttonBarButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/titleColor"
+            android:textColor="@color/primaryTextColor"
             android:textSize="14sp"
             android:text="@string/view" />
 
@@ -166,7 +166,7 @@
             style="?android:attr/buttonBarButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/titleColor"
+            android:textColor="@color/primaryTextColor"
             android:textSize="14sp"
             android:text="@string/back_to_home" />
 
