--- a/app/src/main/res/layout/empty_orders_recycler_state.xml
+++ b/app/src/main/res/layout/empty_orders_recycler_state.xml
@@ -47,7 +47,7 @@
         android:gravity="center"
         android:text="@string/no_orders_received"
         app:layout_constraintEnd_toEndOf="parent"
-        android:textColor="@color/titleColor"
+        android:textColor="@color/primaryTextColor"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/stateIntroText" />
 
