create sale for non-pos transactions.

--- a/app/src/main/res/layout/content_sales_history.xml
+++ b/app/src/main/res/layout/content_sales_history.xml
@@ -29,7 +29,7 @@
 
         <co.loystar.loystarbusiness.utils.ui.buttons.SpinnerButton
             android:id="@+id/typeOfSaleSpinner"
-            android:layout_width="wrap_content"
+            android:layout_width="200dp"
             android:layout_gravity="center"
             android:layout_height="wrap_content"
             android:prompt="@string/select_one_prompt"
