--- a/app/src/main/res/layout-w600dp/content_merchant_back_office.xml
+++ b/app/src/main/res/layout-w600dp/content_merchant_back_office.xml
@@ -26,7 +26,7 @@
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
-        android:paddingTop="32dp">
+        android:paddingTop="24dp">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
@@ -39,30 +39,15 @@
                 android:layout_height="match_parent"
                 tools:context="co.loystar.loystarbusiness.fragments.ChartFragment">
 
-                <TextView
-                    android:id="@+id/barTitle"
-                    android:layout_width="175dp"
-                    android:layout_height="wrap_content"
-                    android:text="@string/sales_overview"
-                    android:textColor="@color/greenDarK"
-                    app:layout_constraintEnd_toStartOf="@+id/viewHistoryBtn"
-                    app:layout_constraintHorizontal_bias="0.5"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
                 <Button
                     android:id="@+id/viewHistoryBtn"
                     style="?android:attr/buttonBarButtonStyle"
-                    android:layout_width="175dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/view_all"
-                    android:textColor="@color/greenDarK"
-                    app:layout_constraintBottom_toBottomOf="@+id/barTitle"
-                    app:layout_constraintEnd_toStartOf="@+id/barTitle"
-                    app:layout_constraintHorizontal_bias="0.5"
-                    app:layout_constraintStart_toEndOf="@+id/barTitle"
+                    android:text="@string/sales_overview"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/barTitle" />
+                    app:layout_constraintEnd_toEndOf="parent"/>
+
 
                 <android.support.v7.widget.CardView
                     android:layout_width="match_parent"
@@ -75,7 +60,7 @@
                     android:layout_marginRight="1dp"
                     android:layout_marginEnd="1dp"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/barTitle"
+                    app:layout_constraintTop_toBottomOf="@+id/viewHistoryBtn"
                     android:id="@+id/chartCardView">
 
                     <com.github.mikephil.charting.charts.BarChart
