reset password flow ui fixes.

--- a/app/src/main/res/layout/content_forgot_password.xml
+++ b/app/src/main/res/layout/content_forgot_password.xml
@@ -68,24 +68,23 @@
 
             </android.support.design.widget.TextInputLayout>
 
-            <TextView
-                android:clickable="true"
-                android:focusable="true"
-                android:layout_marginTop="10dp"
-                android:id="@+id/i_have_code"
-                android:textAppearance="?android:attr/textAppearanceMedium"
+            <Button
+                android:id="@+id/i_have_token"
+                android:layout_marginTop="5dp"
+                style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="wrap_content"
-                android:textSize="@dimen/text_size_small"
-                android:text="@string/i_have_code_already"
                 android:layout_height="wrap_content"
-                android:layout_gravity="end" />
+                android:text="@string/i_have_password_reset_token"
+                android:textColor="@color/primaryTextColor"
+                android:layout_gravity="end"/>
+
 
             <co.loystar.loystarbusiness.utils.ui.buttons.BrandButtonNormal
                 android:id="@+id/submit"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/submit"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="16dp"
                 android:textSize="@dimen/login_button_text_size" />
 
         </LinearLayout>
