--- a/app/src/main/res/layout/content_authenticator_activity.xml
+++ b/app/src/main/res/layout/content_authenticator_activity.xml
@@ -78,7 +78,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/prompt_password"
-                    android:imeActionId="@+id/login"
                     android:imeActionLabel="@string/action_sign_in_short"
                     android:imeOptions="actionUnspecified"
                     android:inputType="textPassword"
@@ -86,17 +85,15 @@
 
             </android.support.design.widget.TextInputLayout>
 
-
-            <TextView
-                android:clickable="true"
-                android:layout_marginTop="10dp"
+            <Button
                 android:id="@+id/forgot_password"
-                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:layout_marginTop="5dp"
+                style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="wrap_content"
-                android:textSize="@dimen/text_size_small"
-                android:text="@string/forgot_password"
                 android:layout_height="wrap_content"
-                android:layout_gravity="end" />
+                android:text="@string/forgot_password"
+                android:textColor="@color/primaryTextColor"
+                android:layout_gravity="end"/>
 
             <co.loystar.loystarbusiness.utils.ui.buttons.BrandButtonNormal
                 android:id="@+id/email_sign_in_button"
